<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>fx-basics</groupId>
  <artifactId>likeButtonFX</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  
  <properties>
  	<maven.compiler.source>13</maven.compiler.source>
  	<maven.compiler.target>13</maven.compiler.target>
  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <dependencies>
	    <dependency>
	      <groupId>org.openjfx</groupId>
	      <artifactId>javafx-controls</artifactId>
	      <version>13</version>
	    </dependency>
	    <dependency>
		    <groupId>org.openjfx</groupId>
		    <artifactId>javafx-fxml</artifactId>
		    <version>11</version>
		</dependency>
	</dependencies>
  
  <build>
    <plugins>
         
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>main.LikeApp</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
		<plugin>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <version>3.0.0-M5</version>
			    <configuration>
			        <argLine>--enable-preview</argLine>
			    </configuration>
		</plugin>
		<plugin>
			    <artifactId>maven-failsafe-plugin</artifactId>
			    <version>3.0.0-M5</version>
			    <configuration>
			        <argLine>--enable-preview</argLine>
			    </configuration>
		</plugin>
		
		 <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.3</version>
        <configuration>
          <mainClass>main.LikeApp</mainClass>
        </configuration>
      </plugin>
      
    </plugins>
  </build>
</project>